fixed header z-index

--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,7 @@ img {
   width: 100%;
   box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.12), inset 0 12px 24px 0 rgba(0, 0, 0, 0.12);
   background: rgba(255, 255, 255, 0.67);
+  z-index: 2;
 }
 @media screen and (min-width: 768px) {
   .section-header {
